k8s/stats-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  labels:
    app: stats-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
      - name: stats-service
        image: key717/stats-service:latest  
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: stats-service
spec:
  selector:
    app: stats-service
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
