k8s/student-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  labels:
    app: student-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-service
        image: key717/student-service:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: student-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
